@@ -2468,6 +2468,12 @@ to this printer. The default port monitor is "none".
 
 <p>The port-monitor-supported attribute specifies the available port monitors.
 
+<h4><a name="printer-dns-sd-name">printer-dns-sd-name (name(MAX) | noValue)</a><span class='info'>CUPS 1.4</span></h4>
+
+<p>The printer-dns-sd-name attribute specifies the registered DNS-SD service
+name for the printer. If the printer is not being shared using this protocol,
+printer-dns-sd-name will have the noValue value.</p>
+
 <h4><a name="printer-type">printer-type (type2 enum)</a></h4>
 
 <p>The printer-type attribute specifies printer type and
